hphp/hack/test/typecheck/const_attribute/usage/superclass_not_const.php
<?hh

class A {}

<<__Const>>
class B extends A {}
